crates/uitest/fixtures/name_resolution/import_ambiguous.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/import_ambiguous.fe
---
error[2-0004]: `S` is ambiguous
   ┌─ import_ambiguous.fe:2:9
   │
 2 │ pub use S
   │         ^ `S` is ambiguous
   ·
11 │         pub struct S {}
   │                    - candidate 1
   ·
14 │         pub struct S {}
   │                    - candidate 2

error[2-0004]: `S` is ambiguous
   ┌─ import_ambiguous.fe:7:13
   │
 7 │     pub use S
   │             ^ `S` is ambiguous
   ·
11 │         pub struct S {}
   │                    - candidate 1
   ·
14 │         pub struct S {}
   │                    - candidate 2
